# game-engine

./: .gitignore
data/: camera.dae  cone.dae  cube.dae  main.dae  monkey.dae  plane.dae  plane2.dae  shader.frag  shader.vert  sphere.dae
graphics/: AssImporter.cpp  AssImporter.hpp  CMakeLists.txt  Camera.cpp  Camera.hpp  DeferredRenderer.cpp  DeferredRenderer.hpp  Face.hpp  ForwardRenderer.cpp  ForwardRenderer.hpp  GraphicsEngine.cpp  GraphicsEngine.hpp  Importer.cpp  Importer.hpp  Makefile  Makefile.tmp  Model.cpp  Model.hpp  RenderMethod-impl.cpp  Renderer-impl.cpp  Renderer.cpp  Renderer.hpp  Scene.cpp  Scene.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  main.cpp  notes  opengl.hpp  utility.hpp
graphics/tests/: Makefile  import.cpp
graphics/tests/glfw/: AssImporter.cpp  AssImporter.hpp  Makefile  Object.hpp  main.cpp  shader.vert
graphics/tests/glfw-test/: Makefile  main.cpp
network/: Networks.hpp  Socket.hpp
